--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Tugas Recycler View</string>
     <string name="title">Judul</string>
     <string name="subtitle">Deskripsi</string>
+    <string name="default_web_client_id">246152338388-uf685ai7olbqi7ra5t759rcf2jc4t9fs.apps.googleusercontent.com</string>
 </resources>
